@@ -500,14 +500,14 @@ public final class GamePackets {
 		return lew.getBytes();
 	}
 
-	public static byte[] writeQuestComplete(short questId, QuestEntry status) {
+	public static byte[] writeQuestComplete(short questId, long completionTime) {
 		LittleEndianByteArrayWriter lew = new LittleEndianByteArrayWriter();
 
 		lew.writeShort(ClientSendOps.SHOW_STATUS_INFO);
 		lew.writeByte(PacketSubHeaders.STATUS_INFO_QUEST);
 		lew.writeShort(questId);
 		lew.writeByte(QuestEntry.STATE_COMPLETED);
-		lew.writeLong(TimeTool.unixToWindowsTime(status.getCompletionTime()));
+		lew.writeLong(TimeTool.unixToWindowsTime(completionTime));
 
 		return lew.getBytes();
 	}
